--- a/src/styles.css
+++ b/src/styles.css
@@ -46,12 +46,12 @@
   display: none;
 }
 
-.fileset-appearance, #filesets .fileset, #fileset-editor-container {
+.fileset-appearance, #filesets .fileset, .fileset-editor-container {
   border: 1px solid rgb(229, 229, 229);
   background-color: rgb(255, 255, 255);
   margin-bottom: -1px;
 }
-.fileset-appearance .fileset-header, #filesets .fileset .fileset-header, #fileset-editor-container .fileset-header {
+.fileset-appearance .fileset-header, #filesets .fileset .fileset-header, .fileset-editor-container .fileset-header {
   position: relative;
   justify-content: space-between;
   align-items: center;
@@ -59,17 +59,17 @@
   width: calc(100% - 2 * 5px);
   border-bottom: 1px solid rgb(229, 229, 229);
 }
-.fileset-appearance .fileset-header *, #filesets .fileset .fileset-header *, #fileset-editor-container .fileset-header * {
+.fileset-appearance .fileset-header *, #filesets .fileset .fileset-header *, .fileset-editor-container .fileset-header * {
   min-width: 0;
 }
-.fileset-appearance .fileset-header .fileset-identifiers, #filesets .fileset .fileset-header .fileset-identifiers, #fileset-editor-container .fileset-header .fileset-identifiers {
+.fileset-appearance .fileset-header .fileset-identifiers, #filesets .fileset .fileset-header .fileset-identifiers, .fileset-editor-container .fileset-header .fileset-identifiers {
   max-width: calc(100% - 4em);
 }
-.fileset-appearance .fileset-header .fileset-identifiers *, #filesets .fileset .fileset-header .fileset-identifiers *, #fileset-editor-container .fileset-header .fileset-identifiers * {
+.fileset-appearance .fileset-header .fileset-identifiers *, #filesets .fileset .fileset-header .fileset-identifiers *, .fileset-editor-container .fileset-header .fileset-identifiers * {
   overflow-x: hidden;
   white-space: nowrap;
 }
-.fileset-appearance .fileset-header .fileset-identifiers .fileset-name, #filesets .fileset .fileset-header .fileset-identifiers .fileset-name, #fileset-editor-container .fileset-header .fileset-identifiers .fileset-name {
+.fileset-appearance .fileset-header .fileset-identifiers .fileset-name, #filesets .fileset .fileset-header .fileset-identifiers .fileset-name, .fileset-editor-container .fileset-header .fileset-identifiers .fileset-name {
   flex-shrink: 0;
   margin-top: 0.2em;
   margin-bottom: 0.5em;
@@ -77,7 +77,7 @@
   width: 100%;
   border-bottom: 1px solid gray;
 }
-.fileset-appearance .fileset-header .fileset-identifiers .fileset-path, #filesets .fileset .fileset-header .fileset-identifiers .fileset-path, #fileset-editor-container .fileset-header .fileset-identifiers .fileset-path {
+.fileset-appearance .fileset-header .fileset-identifiers .fileset-path, #filesets .fileset .fileset-header .fileset-identifiers .fileset-path, .fileset-editor-container .fileset-header .fileset-identifiers .fileset-path {
   font-size: 0.9em;
   margin-bottom: 0.2em;
   margin-top: 0;
@@ -85,7 +85,7 @@
   color: rgb(100, 100, 100);
   width: 100%;
 }
-.fileset-appearance .fileset-header .fileset-menu-wrapper, #filesets .fileset .fileset-header .fileset-menu-wrapper, #fileset-editor-container .fileset-header .fileset-menu-wrapper {
+.fileset-appearance .fileset-header .fileset-menu-wrapper, #filesets .fileset .fileset-header .fileset-menu-wrapper, .fileset-editor-container .fileset-header .fileset-menu-wrapper {
   position: absolute;
   top: 0;
   right: 0;
@@ -95,20 +95,20 @@
      -moz-user-select: none;
           user-select: none;
 }
-.fileset-appearance .fileset-header .fileset-menu-wrapper label, #filesets .fileset .fileset-header .fileset-menu-wrapper label, #fileset-editor-container .fileset-header .fileset-menu-wrapper label {
+.fileset-appearance .fileset-header .fileset-menu-wrapper label, #filesets .fileset .fileset-header .fileset-menu-wrapper label, .fileset-editor-container .fileset-header .fileset-menu-wrapper label {
   position: absolute;
   top: 45%;
   right: 0;
   margin-right: 0.5em;
   transform: translateY(-60%);
 }
-.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox, #fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox,
+.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox, .fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox,
 .fileset-appearance .fileset-header .fileset-menu-wrapper .menu,
 #filesets .fileset .fileset-header .fileset-menu-wrapper .menu,
-#fileset-editor-container .fileset-header .fileset-menu-wrapper .menu {
+.fileset-editor-container .fileset-header .fileset-menu-wrapper .menu {
   display: none;
 }
-.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu, #fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu {
+.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu, .fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu {
   position: absolute;
   top: 0;
   right: 0;
@@ -121,23 +121,23 @@
   border-radius: 0 0 0 0.5em;
   background-color: white;
 }
-.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox, #fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox {
+.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox, .fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox {
   display: none;
 }
-.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox:checked ~ .menu, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox:checked ~ .menu, #fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox:checked ~ .menu {
+.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox:checked ~ .menu, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox:checked ~ .menu, .fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-checkbox:checked ~ .menu {
   display: block;
 }
-.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item, #fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item {
+.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item, .fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
-.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item:hover, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item:hover, #fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item:hover {
+.fileset-appearance .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item:hover, #filesets .fileset .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item:hover, .fileset-editor-container .fileset-header .fileset-menu-wrapper .fileset-menu-checkbox:checked + .menu .fileset-menu-item:hover {
   background-color: #f1f1f1;
 }
 
-.bottom-area-design, #fileset-editor-container #bottom-area, #fileset-editor-container .cover {
+.bottom-area-design, .fileset-editor-container .bottom-area, .fileset-editor-container .cover {
   background-color: #eaeaea;
   display: flex;
   align-content: center;
@@ -147,31 +147,31 @@
   padding-right: 5px;
   height: 1.8em;
 }
-.bottom-area-design img, #fileset-editor-container #bottom-area img, #fileset-editor-container .cover img {
+.bottom-area-design img, .fileset-editor-container .bottom-area img, .fileset-editor-container .cover img {
   display: block;
   margin: auto;
 }
 
-#fileset-editor-container {
+.fileset-editor-container {
   margin-bottom: 4em;
   margin-left: 40px;
   width: 80vw;
 }
-#fileset-editor-container input,
-#fileset-editor-container button,
-#fileset-editor-container .bottom-button {
+.fileset-editor-container input,
+.fileset-editor-container button,
+.fileset-editor-container .bottom-button {
   cursor: pointer;
 }
-#fileset-editor-container input {
+.fileset-editor-container input {
   cursor: text;
 }
-#fileset-editor-container content {
+.fileset-editor-container content {
   height: 4.2em;
 }
-#fileset-editor-container #bottom-area #tag-button:hover {
+.fileset-editor-container .bottom-area #tag-button:hover {
   filter: brightness(0.95);
 }
-#fileset-editor-container #tag-area {
+.fileset-editor-container .tag-area {
   height: 3em;
   width: calc(80vw - 1em);
   flex-wrap: nowrap;
@@ -180,55 +180,55 @@
   white-space: nowrap;
   position: absolute;
   padding-bottom: 0.3em;
-  top: 6.5em;
+  top: 7em;
 }
-#fileset-editor-container #tag-area .tag {
+.fileset-editor-container .tag-area .tag {
   background-color: #77AAC9;
   color: #2D2440;
 }
-#fileset-editor-container #tag-area .tag:hover {
+.fileset-editor-container .tag-area .tag:hover {
   background-color: #5293bb;
   color: #16121f;
 }
-#fileset-editor-container #tag-area .tag.selected {
+.fileset-editor-container .tag-area .tag.selected {
   background-color: #2D2440;
   color: #77AAC9;
 }
-#fileset-editor-container #tag-area .tag.selected:hover {
+.fileset-editor-container .tag-area .tag.selected:hover {
   background-color: #443661;
   color: #9cc1d7;
 }
 
-#fileset-editor input {
+.fileset-editor input {
   display: block;
   border: 1px solid rgb(0, 0, 0);
 }
-#fileset-editor input:focus {
+.fileset-editor input:focus {
   outline: none;
   border: 1px solid rgb(0, 0, 0);
   background-color: seashell;
 }
-#fileset-editor #editing-fileset-identifiers #fileset-name-group,
-#fileset-editor #editing-fileset-identifiers #fileset-path-group {
+.fileset-editor .editing-fileset-identifiers .fileset-name-group,
+.fileset-editor .editing-fileset-identifiers .fileset-path-group {
   width: 100%;
 }
-#fileset-editor #editing-fileset-identifiers input {
+.fileset-editor .editing-fileset-identifiers input {
   display: block;
   box-sizing: border-box;
   width: 100%;
   height: 2em;
   padding: 0.5em;
 }
-#fileset-editor #editing-fileset-identifiers #fileset-path-group .flex-wrapper {
+.fileset-editor .editing-fileset-identifiers .fileset-path-group .flex-wrapper {
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
 }
-#fileset-editor #editing-fileset-identifiers #fileset-path-group .flex-wrapper input {
+.fileset-editor .editing-fileset-identifiers .fileset-path-group .flex-wrapper input {
   width: calc(100% - min(5.5em, 20%) - 0.5em);
 }
-#fileset-editor #editing-fileset-identifiers #fileset-path-group .flex-wrapper button {
+.fileset-editor .editing-fileset-identifiers .fileset-path-group .flex-wrapper button {
   display: block;
   width: min(5.5em, 20%);
   height: 2em;
@@ -240,10 +240,10 @@
   justify-content: center;
   cursor: pointer;
 }
-#fileset-editor .tags .tag {
+.fileset-editor .tags .tag {
   max-width: min(100%, 21.4em);
 }
-#fileset-editor .tags .tag .dynamically-sizing {
+.fileset-editor .tags .tag .dynamically-sizing {
   text-overflow: clip;
   min-width: 1em;
   width: 1em;
