--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -82,14 +82,6 @@
                 border-radius: 0 0 0 0.5em;
                 background-color: white;
 
-                .fileset-menu-checkbox {
-                    display: none;
-
-                    &:checked~.menu {
-                        display: block;
-                    }
-                }
-
                 .fileset-menu-item {
                     color: black;
                     padding: 12px 16px;
@@ -121,69 +113,31 @@
     }
 }
 
-.fileset-editor-container {
+#fileset-editor-container {
     @extend .fileset-appearance;
     margin-bottom: 4em;
     margin-left: 40px;
     width: 80vw;
 
-    input,
-    button,
-    .bottom-button {
-        cursor: pointer;
-    }
-
-    input {
-        cursor: text;
-    }
-
     .cover {
         @extend .bottom-area-design;
+
+        .bottom-button {
+            cursor: pointer
+        }
     }
 
-    content {
-        height: 4.2em;
+    .tags {
+        position: absolute;
+        padding-bottom: 0.3em;
+        top: 7em;
     }
 
     .bottom-area {
         @extend .bottom-area-design;
 
-        #tag-button:hover {
+        .tag-button:hover {
             filter: brightness(0.95);
-        }
-    }
-
-    .tag-area {
-        height: 3em;
-        width: calc(80vw - 1em);
-        flex-wrap: nowrap;
-        overflow-x: scroll;
-        overflow-y: visible;
-        white-space: nowrap;
-        position: absolute;
-        padding-bottom: 0.3em;
-        top: 7em;
-        $tagbg: #77AAC9;
-        $tagfg: #2D2440;
-
-        .tag {
-            background-color: $tagbg;
-            color: $tagfg;
-        }
-
-        .tag:hover {
-            background-color: darken($tagbg, 10%);
-            color: darken($tagfg, 10%);
-        }
-
-        .tag.selected {
-            background-color: $tagfg;
-            color: $tagbg;
-        }
-
-        .tag.selected:hover {
-            background-color: lighten($tagfg, 10%);
-            color: lighten($tagbg, 10%);
         }
     }
 }
@@ -200,10 +154,10 @@
         background-color: seashell;
     }
 
-    .editing-fileset-identifiers {
+    .fileset-header {
 
-        .fileset-name-group,
-        .fileset-path-group {
+        .fileset-name,
+        .fileset-path {
             width: 100%;
         }
 
@@ -215,7 +169,7 @@
             padding: 0.5em;
         }
 
-        .fileset-path-group .flex-wrapper {
+        .fileset-path .flex-wrapper {
             display: flex;
             justify-content: space-around;
             align-items: center;
@@ -244,13 +198,56 @@
     .tags {
         .tag {
             max-width: calc(min(100%, 21.4em));
+        }
+    }
 
-            .dynamically-sizing {
-                text-overflow: clip;
-                min-width: 1em;
-                width: 1em;
-                max-width: calc(min(100%, 20em));
-            }
+    input,
+    button,
+    .bottom-button {
+        cursor: pointer;
+    }
+
+    input {
+        cursor: text;
+    }
+
+
+    .bottom-area {
+        @extend .bottom-area-design;
+        justify-content: right;
+        .tag-button:hover {
+            filter: brightness(0.95);
+        }
+    }
+
+    .tags {
+        height: 3em;
+        width: calc(80vw - 1em);
+        flex-wrap: nowrap;
+        overflow-x: scroll;
+        overflow-y: visible;
+        white-space: nowrap;
+        $tagbg: #77AAC9;
+        $tagfg: #2D2440;
+
+        .tag {
+            background-color: $tagbg;
+            color: $tagfg;
+        }
+
+        .tag:hover {
+            background-color: darken($tagbg, 10%);
+            color: darken($tagfg, 10%);
+        }
+
+        .tag.selected {
+            background-color: $tagfg;
+            color: $tagbg;
+        }
+
+        .tag.selected:hover {
+            background-color: lighten($tagfg, 10%);
+            color: lighten($tagbg, 10%);
         }
     }
 }
